# uptime-pulse

./: .gitignore  AI_LOG.md  Makefile  README.md  docker-compose.yml  lefthook.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/core/: database.py  logger.py  settings.py
backend/src/monitors/: models.py  poller.py  router.py
backend/src/worker/: consumer.py  scheduler.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: add-monitor-dialog.tsx  app-shell.tsx  empty-state.tsx  monitor-list.tsx  stat-tile.tsx  status-badge.tsx  theme-toggle.tsx
frontend/lib/: api.ts
infra/: deployment-sketch.md
k8s/: backend-api.yaml  keda-scaledobject.yaml  kind-config.yaml  namespace.yaml  redis.yaml  scheduler-cronjob.yaml  worker-deployment.yaml
