[project]
name = "epifi-uptime-monitor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.130",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "orjson>=3.10",
    "redis>=5.0",
    "async-timeout>=4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
